--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,10 +1,4 @@
 require: rubocop-rspec
-AllCops:
-  Include:
-    - Gemfile
-    - lib/**/*.rb
-    - spec/**/*.rb
-  TargetRubyVersion: 2.5
 
 Layout/AlignHash:
   EnforcedLastArgumentHashStyle: ignore_implicit
@@ -24,6 +18,7 @@ Layout/SpaceBeforeFirstArg:
 Metrics/BlockLength:
   Exclude:
     - spec/**/*
+    - "*.gemspec"
 
 Metrics/CyclomaticComplexity:
   Max: 10
