--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,6 @@
-require: rubocop-rspec
+require:
+  - rubocop-performance
+  - rubocop-rspec
 
 Layout/AlignHash:
   EnforcedLastArgumentHashStyle: ignore_implicit
