--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,9 +1,16 @@
+---
 version: 2
 updates:
-- package-ecosystem: bundler
-  directory: "/"
-  schedule:
-    interval: daily
-    time: "04:00"
-    timezone: Europe/Amsterdam
-  open-pull-requests-limit: 10
+  - package-ecosystem: github-actions
+    directory: /
+    schedule:
+      interval: daily
+      time: "10:00"
+      timezone: Europe/Amsterdam
+  - package-ecosystem: bundler
+    directory: /
+    registries: "*"
+    schedule:
+      interval: daily
+      time: "09:00"
+      timezone: Europe/Amsterdam
