--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,20 +1,22 @@
 name: CI
 
-on: [push]
+on:
+  - push
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Ruby 2.6
-      uses: actions/setup-ruby@v1
+    - uses: actions/checkout@v4
+
+    - name: Set up Ruby
+      uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 2.6.x
+        ruby-version: '3.2'
 
     - name: Run tests
       run: |
         gem install bundler
         bundle install --jobs 4 --retry 3
-        bundle exec rspec
+        bundle exec rspec spec --format RspecJunitFormatter --out coverage/rspec.xml --format progress --profile 10 --color --order random
